[package]
name = "multiplayer-fps"
version = "0.1.0"
edition = "2021"


# Liste des binaires
[[bin]]
name = "client"  
path = "src/system/systeme.rs"
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
get_if_addrs = "0.5.3"
nalgebra = "0.33.2"
tokio = {version = "1.43.0", features=["full"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"


